--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 id="">My Skills</h1>
+  <h1 id="title">My Skills</h1>
   <br />
   <div class="bigbar">
     <div class="bar" id="java">
